err/notedown.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Jinja2-2.10.dist-info'...
Listing './lib/python3.5/site-packages/MarkupSafe-1.0.egg-info'...
Listing './lib/python3.5/site-packages/Pygments-2.2.0.dist-info'...
Listing './lib/python3.5/site-packages/bleach'...
Listing './lib/python3.5/site-packages/bleach-2.1.2.dist-info'...
Listing './lib/python3.5/site-packages/decorator-4.1.2.dist-info'...
Listing './lib/python3.5/site-packages/entrypoints-0.2.3.dist-info'...
Listing './lib/python3.5/site-packages/html5lib'...
Listing './lib/python3.5/site-packages/html5lib/_trie'...
Listing './lib/python3.5/site-packages/html5lib/filters'...
Listing './lib/python3.5/site-packages/html5lib/treeadapters'...
Listing './lib/python3.5/site-packages/html5lib/treebuilders'...
Listing './lib/python3.5/site-packages/html5lib/treewalkers'...
Listing './lib/python3.5/site-packages/html5lib-1.0.1.dist-info'...
Listing './lib/python3.5/site-packages/ipython_genutils'...
Listing './lib/python3.5/site-packages/ipython_genutils/testing'...
Listing './lib/python3.5/site-packages/ipython_genutils/tests'...
Listing './lib/python3.5/site-packages/ipython_genutils-0.2.0.dist-info'...
Listing './lib/python3.5/site-packages/jinja2'...
Compiling './lib/python3.5/site-packages/jinja2/asyncfilters.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncfilters.py", line 24
    yield item
    ^
SyntaxError: 'yield' inside async function

Compiling './lib/python3.5/site-packages/jinja2/asyncsupport.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncsupport.py", line 35
    yield event
    ^
SyntaxError: 'yield' inside async function

Listing './lib/python3.5/site-packages/jsonschema'...
Listing './lib/python3.5/site-packages/jsonschema/schemas'...
Listing './lib/python3.5/site-packages/jsonschema/tests'...
Listing './lib/python3.5/site-packages/jsonschema-2.6.0.dist-info'...
Listing './lib/python3.5/site-packages/jupyter_core'...
Listing './lib/python3.5/site-packages/jupyter_core/tests'...
Listing './lib/python3.5/site-packages/jupyter_core/tests/dotipython'...
Listing './lib/python3.5/site-packages/jupyter_core/tests/dotipython/nbextensions'...
Listing './lib/python3.5/site-packages/jupyter_core/tests/dotipython/profile_default'...
Listing './lib/python3.5/site-packages/jupyter_core/tests/dotipython/profile_default/static'...
Listing './lib/python3.5/site-packages/jupyter_core/tests/dotipython/profile_default/static/custom'...
Listing './lib/python3.5/site-packages/jupyter_core/tests/dotipython_empty'...
Listing './lib/python3.5/site-packages/jupyter_core/tests/dotipython_empty/profile_default'...
Listing './lib/python3.5/site-packages/jupyter_core/tests/dotipython_empty/profile_default/static'...
Listing './lib/python3.5/site-packages/jupyter_core/tests/dotipython_empty/profile_default/static/custom'...
Listing './lib/python3.5/site-packages/jupyter_core/utils'...
Listing './lib/python3.5/site-packages/jupyter_core-4.4.0.dist-info'...
Listing './lib/python3.5/site-packages/markupsafe'...
Listing './lib/python3.5/site-packages/mistune-0.8.3.dist-info'...
Listing './lib/python3.5/site-packages/nbconvert'...
Listing './lib/python3.5/site-packages/nbconvert/exporters'...
Listing './lib/python3.5/site-packages/nbconvert/exporters/tests'...
Listing './lib/python3.5/site-packages/nbconvert/exporters/tests/files'...
Listing './lib/python3.5/site-packages/nbconvert/filters'...
Listing './lib/python3.5/site-packages/nbconvert/filters/tests'...
Listing './lib/python3.5/site-packages/nbconvert/postprocessors'...
Listing './lib/python3.5/site-packages/nbconvert/postprocessors/tests'...
Listing './lib/python3.5/site-packages/nbconvert/preprocessors'...
Listing './lib/python3.5/site-packages/nbconvert/preprocessors/tests'...
Listing './lib/python3.5/site-packages/nbconvert/preprocessors/tests/files'...
Listing './lib/python3.5/site-packages/nbconvert/resources'...
Listing './lib/python3.5/site-packages/nbconvert/templates'...
Listing './lib/python3.5/site-packages/nbconvert/templates/html'...
Listing './lib/python3.5/site-packages/nbconvert/templates/latex'...
Listing './lib/python3.5/site-packages/nbconvert/templates/latex/skeleton'...
Listing './lib/python3.5/site-packages/nbconvert/templates/skeleton'...
Listing './lib/python3.5/site-packages/nbconvert/tests'...
Listing './lib/python3.5/site-packages/nbconvert/tests/exporter_entrypoint'...
Listing './lib/python3.5/site-packages/nbconvert/tests/exporter_entrypoint/eptest-0.1.dist-info'...
Listing './lib/python3.5/site-packages/nbconvert/tests/files'...
Listing './lib/python3.5/site-packages/nbconvert/utils'...
Listing './lib/python3.5/site-packages/nbconvert/utils/tests'...
Listing './lib/python3.5/site-packages/nbconvert/writers'...
Listing './lib/python3.5/site-packages/nbconvert/writers/tests'...
Listing './lib/python3.5/site-packages/nbconvert-5.3.1.dist-info'...
Listing './lib/python3.5/site-packages/nbformat'...
Listing './lib/python3.5/site-packages/nbformat/tests'...
Listing './lib/python3.5/site-packages/nbformat/v1'...
Listing './lib/python3.5/site-packages/nbformat/v1/tests'...
Listing './lib/python3.5/site-packages/nbformat/v2'...
Listing './lib/python3.5/site-packages/nbformat/v2/tests'...
Listing './lib/python3.5/site-packages/nbformat/v3'...
Listing './lib/python3.5/site-packages/nbformat/v3/tests'...
Listing './lib/python3.5/site-packages/nbformat/v4'...
Listing './lib/python3.5/site-packages/nbformat/v4/tests'...
Listing './lib/python3.5/site-packages/nbformat-4.4.0.dist-info'...
Listing './lib/python3.5/site-packages/notedown'...
Listing './lib/python3.5/site-packages/notedown/templates'...
Listing './lib/python3.5/site-packages/notedown-1.5.1.dist-info'...
Listing './lib/python3.5/site-packages/pandoc_attributes-0.1.7.egg-info'...
Listing './lib/python3.5/site-packages/pandocfilters-1.4.2.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pygments'...
Listing './lib/python3.5/site-packages/pygments/filters'...
Listing './lib/python3.5/site-packages/pygments/formatters'...
Listing './lib/python3.5/site-packages/pygments/lexers'...
Listing './lib/python3.5/site-packages/pygments/styles'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/testpath'...
Listing './lib/python3.5/site-packages/testpath-0.3.1.dist-info'...
Listing './lib/python3.5/site-packages/traitlets'...
Listing './lib/python3.5/site-packages/traitlets/config'...
Listing './lib/python3.5/site-packages/traitlets/config/tests'...
Listing './lib/python3.5/site-packages/traitlets/tests'...
Listing './lib/python3.5/site-packages/traitlets/utils'...
Listing './lib/python3.5/site-packages/traitlets/utils/tests'...
Listing './lib/python3.5/site-packages/traitlets-4.3.2.dist-info'...
Listing './lib/python3.5/site-packages/webencodings'...
Listing './lib/python3.5/site-packages/webencodings-0.5.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
